# sports-analyst

./: .env.example  .gitattributes  .gitignore  BUG_FIX_CAMERA.md  DEPLOYMENT.md  Dockerfile.backend  GIT_SETUP_COMPLETE.md  LICENSE  QUICK_DEPLOY.md  QUICK_START_DEV.md  README.md  TESTING_CHECKLIST.md  TEST_STATUS.md  deploy.sh  dev-setup.sh  docker-compose.yml  nginx.conf  package-lock.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: main.py  requirements.txt
docs/: GROOMING_SESSION_2025-10-27.md  GROOMING_SESSION_T16_Camera_Calibration.md  T10_HYBRID_AUTO_STOP_KICKOFF.md  T10_PHASE_3_TESTING_GUIDE.md  T16_COMPLETION_SUMMARY.md  T16_Camera_Calibration_Quick_Reference.md  T16_Quick_Reference.md  T17_CAMERA_SETTINGS_SUMMARY.md  T3A_model_survey.md  T3A_shortlist.json  TASK_4_SUMMARY.md  TASK_5_DECISION.md  architecture.md  camera-fps-strategy.md  camera-settings-mobile-limitations.md  debugging-guide.md  github-issues-created.md  manual-testing.md  mobile-testing.md  player-stats-architecture.md  player-stats-mockup.html  project-plan.json  project-plan.md  replay-trajectory-only-mockup.html  trajectory-only-replay-analysis.md
frontend/: Dockerfile  README.md  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
ml/download-scripts/: README.md  download_akel_varghese.py  download_gts_ai.sh  (+1 more)
ml/export/: README.md
python/: README.md
(+113 files in other folders)
