[project]
name = "speedometer-ml"
version = "0.1.0"
description = "ML training and speed calculation utilities for cricket ball tracking"
requires-python = ">=3.11"
dependencies = [
    "fastai>=2.7.0",
    "torch>=2.0.0",
    "opencv-python>=4.8.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/speedometer"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=speedometer --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
